--- a/templates/Profile.html
+++ b/templates/Profile.html
@@ -151,7 +151,7 @@
             </tr>
             <tr>
                 <td><i class="fas fa-phone"></i> Numéro du téléphone</td>
-                <td>📞 {{ person[3] }}</td>
+                <td>{{ person[3] }}</td>
             </tr>
             <tr>
                 <td><i class="fas fa-envelope"></i> Email</td>
