--- a/templates/modifier.html
+++ b/templates/modifier.html
@@ -141,7 +141,7 @@
     <!-- Main Content -->
     <div class="content" id="content">
     <div class="header">
-                <button class="menu-btn" id="menu-btn">&#9776;</button>
+                <a href="{{ url_for('Index') }}" class="menu-btn" id="menu-btn"><i class="fas fa-arrow-left"></i></a>
                 <h1>Liste des objets</h1>
             </div>
 
