--- a/templates/objet.html
+++ b/templates/objet.html
@@ -204,7 +204,7 @@
         </div>
     <div class="content" id="content">
             <div class="header">
-                <button class="menu-btn" id="menu-btn">&#9776;</button>
+                <a href="{{ url_for('Index') }}" class="menu-btn" id="menu-btn"><i class="fas fa-arrow-left"></i></a>
             </div>
         <div class="form-card">
 
