--- a/templates/register.html
+++ b/templates/register.html
@@ -189,6 +189,16 @@
                                             id="a_password" name="a_password" placeholder="Confirmez le mot de passe">
                                     </div>
                                 </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-6 mb-3 mb-sm-0">
+                                        <input type="email" class="form-control form-control-user"
+                                            id="email" name="email" placeholder="E-mail">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input type="text" class="form-control form-control-user"
+                                            id="adress" name="adress" placeholder="Adress">
+                                    </div>
+                                </div>
                                 <button type="submit" class="btn btn-primary btn-user btn-block">
                                     Créer le compte
                                 </button>
