--- a/templates/tables.html
+++ b/templates/tables.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestion des objets touvés-perdus</title>
+    <title>Gestion des objets perdus</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- DataTables Bootstrap CSS -->
@@ -48,7 +48,7 @@
             left: 0;
         }
 
-        .sidebar h2 {
+        .sidebar h6 {
             font-size: 20px;
             margin-bottom: 20px;
             text-align: center;
@@ -131,7 +131,7 @@
 <body>
     <div class="container my-4" style="margin-left: auto; margin-right: auto;">
         <div class="sidebar" id="sidebar">
-            <h2>GESTION DES OBJETS TROUVES-PERDUS</h2>
+            <h6>GESTION DES OBJETS PERDUS</h6>
             <ul>
                 <li><a href="{{ url_for('profile') }}"><i class="fas fa-user"></i> Profil</a></li>
                 <li><a href="{{ url_for('logout') }}"><i class="fas fa-sign-out-alt"></i> Déconnecter</a></li>
