--- a/templates/all_pub.html
+++ b/templates/all_pub.html
@@ -169,8 +169,21 @@
             <td>{{row.5}}</td>
             <td>{{row.3}}</td>
             <td>{{row.4}}</td>
-            <td><img src="{{ url_for('static', filename=row[7].replace('static/', '')) }}" width="100" height="100"></td>
-            <td>{{row.11}} {{row.12}} [{{row.13}}]</td>
+            <td>
+                <img src="{{ url_for('static', filename=row[7].replace('static/', '')) }}" width="100" height="100">
+                {% if row[7] %}
+                <a href="{{ url_for('static', filename=row[7].replace('static/', '')) }}"><i class="fa fa-image"></i></a>
+                {% endif %}
+                {% if row[9] %}
+                <a href="{{ url_for('static', filename=row[9].replace('static/', '')) }}"><i class="fa fa-image"></i></a>
+                {% endif %}
+                {% if row[10] %}
+                <a href="{{ url_for('static', filename=row[10].replace('static/', '')) }}"><i class="fa fa-image"></i></a>
+                {% endif %}
+                <br>
+
+            </td>
+            <td>{{row.12}} {{row.13}} [{{row.14}}]</td>
 
 
             <td align="center">
