--- a/templates/charts.html
+++ b/templates/charts.html
@@ -201,11 +201,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <!-- Row for Perdu/Trouvé Chart -->
-                        <div class="row">
-                            <div class="col-xl-12 col-lg-12">
+                            <div class="col-xl-6 col-lg-6 mx-auto">
                                 <div class="card shadow mb-4">
                                     <div class="card-header py-3">
                                         <h6 class="m-0 font-weight-bold text-warning">Diffusion selon les objets perdus et trouvés</h6>
@@ -216,6 +213,9 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Row for Perdu/Trouvé Chart -->
+
                     </div>
                     <!-- /.container-fluid -->
                 </div>
