--- a/templates/modifier.html
+++ b/templates/modifier.html
@@ -170,10 +170,10 @@
                         <td><label for="statu">Statut :</label></td>
                         <td>
                             <select name="statu" id="statu">
-                                {% if objet[6] == 'Perdu' %}
+                                {% if objet[8] == 'Perdu' %}
                                     <option value="Perdu" selected>Perdu</option>
                                 {% endif %}
-                                {% if objet[6] == 'Trouvé' %}
+                                {% if objet[8] == 'Trouvé' %}
                                     <option value="Trouvé" selected>Trouvé</option>
                                 {% endif %}
                             </select>
@@ -183,15 +183,17 @@
                         <td>Photo actuelle :</td>
                         <td>
                             {% if objet[5] %}
-                            <img src="{{ url_for('static', filename=objet[5].replace('static/', '')) }}" alt="Image de {{ objet[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;">
+                            <img src="{{ url_for('static', filename=objet[5].replace('static/', '')) }}" alt="Image de {{ objet[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;"><br><img src="{{ url_for('static', filename=objet[6].replace('static/', '')) }}" alt="Image de {{ objet[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;"><br><img src="{{ url_for('static', filename=objet[7].replace('static/', '')) }}" alt="Image de {{ objet[1] }}" class="img-fluid" style="max-width: 100%; max-height: 200px;">
                             {% else %}
                             <p>Aucune image disponible</p>
                             {% endif %}
                         </td>
                     </tr>
                     <tr>
-                        <td><label for="photo">Changer l'image :</label></td>
-                        <td><input type="file" id="photo" name="file" accept="image/*"></td>
+                        <td><label for="photo">Changer les images :</label></td>
+                        <td><input type="file" id="photo" name="file1" accept="image/*"><br>
+                        <input type="file" id="photo" name="file2" accept="image/*"><br>
+                        <input type="file" id="photo" name="file3" accept="image/*"><br></td>
                     </tr>
                     <tr>
                         <td colspan="2" style="text-align: center;">
