--- a/templates/objs_utl.html
+++ b/templates/objs_utl.html
@@ -159,12 +159,22 @@
             <td>{{row.5}}</td>
             <td>{{row.3}}</td>
             <td>{{row.4}}</td>
-            <td><img src="{{ url_for('static', filename=row[7].replace('static/', '')) }}" width="100" height="100"></td>
-            <td>{{row.11}} {{row.12}} {{row.13}}</td>
+            <td><img src="{{ url_for('static', filename=row[7].replace('static/', '')) }}" width="100" height="100"><br>
+                {% if row[7] %}
+                <a href="{{ url_for('static', filename=row[7].replace('static/', '')) }}"><i class="fa fa-image"></i></a>
+                {% endif %}
+                {% if row[9] %}
+                <a href="{{ url_for('static', filename=row[9].replace('static/', '')) }}"><i class="fa fa-image"></i></a>
+                {% endif %}
+                {% if row[10] %}
+                <a href="{{ url_for('static', filename=row[10].replace('static/', '')) }}"><i class="fa fa-image"></i></a>
+                {% endif %}
+            </td>
+            <td>{{row.12}} {{row.13}} [{{row.14}} ]</td>
 
 
             <td align="center">
-                  {% if row.10 == session['user_id'] %}
+                  {% if row.11 == session['user_id'] %}
                     <a href="/updateutl/{{ row.0 }}" style="margin-right: 10px;">
                         <i class="fas fa-fw fa-edit"></i>
                     </a>
